# rogue_like

./: .flake8  .gitignore  README.rst  copilot-instructions.md  pyproject.toml  requirements.txt  unzip.py
levels/: level_01.json  level_02.json  level_03.json
maps/: level_01.json  level_02.json  level_03.json
rogue_like/: constants.py  dungeon_map.py  level.py  main.py  test.py
sprites/: door-ew.aseprite  door-locked-ew.aseprite  door-locked-ns.aseprite  door-ns.aseprite  door-secret-ew.aseprite  door-secret-ns.aseprite  door-trapped-ew.aseprite  door-trapped-ns.aseprite  doors.aseprite  stair-down.aseprite  stair-up.aseprite  stairs.aseprite  walls.aseprite
src/: constants.py  dungeon_map.py  level.py  main.py  match_array.py  recalculate_fov.py  shadows.glsl  shadows.py  util.py  wall_texture_map.py
src/sprites/: animated_sprite.py  creature.py  entity.py  player.py
src/sprites/monsters/: slime.py
